fix: padding of results empty state on mobile

--- a/src/components/mortgage-calculator/results/empty-state/empty-state.module.scss
+++ b/src/components/mortgage-calculator/results/empty-state/empty-state.module.scss
@@ -10,7 +10,8 @@
   height: 100%;
 
   @media (width <= breakpoints.$mobile) {
-    padding-block: 4rem;
+    padding-top: 4rem !important;
+    padding-bottom: 4rem !important;
   }
 }
 
